fixed navbar spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
-  background-color: grey;
-  font-family: 'Montserrat, sans-serif';
+margin: 0;
 }
 
 
