--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -37,3 +37,6 @@
 .btn-primary:hover{
     background: #29e6a7;
 }
+.navbar-top{
+background-color: rgb(57, 57, 126) ;
+}
